# StellrFlow

./: README.md
bots/telegram-stellar/: .env.example  README.md  package-lock.json  package.json
bots/telegram-stellar/src/: interval-parser.ts  sdk-chatbot.ts  telegram-bot.ts
bots/telegram-stellar/src/anchor/: anchorService.ts  index.ts  mockAnchor.ts  offramp.ts  onramp.ts  stellarService.ts
contracts/stellrflow_telegram_bot/: Cargo.toml  README.md
contracts/stellrflow_telegram_bot/.soroban/: config.toml
contracts/stellrflow_telegram_bot/src/: lib.rs
frontend/: next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/connect-wallet/: page.tsx
frontend/app/send-transaction/: page.tsx
frontend/components/: nav-bar.tsx
frontend/components/workflow/: draggable-node-item.tsx  node-category.tsx  node-types-sidebar.tsx  properties-panel.tsx  workflow-builder.tsx
frontend/components/workflow/nodes/: custom-node.tsx
frontend/lib/stores/: workflow-store.ts
frontend/lib/utils/: api-service.ts  icons.tsx
frontend/types/: index.d.ts
