[package]
name = "stellrflow_telegram_bot"
version = "0.1.0"
description = "Stellar Soroban contract for StellrFlow Telegram bot - notification registry and payment verification"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "25.1.0" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
